fix horizontal scroll bar, image sizes, margin for text on about page and images on result page

--- a/app/assets/stylesheets/pages/_about.scss
+++ b/app/assets/stylesheets/pages/_about.scss
@@ -6,6 +6,7 @@
 
 .vision-text {
   font-size: 20px;
+  margin-right: 5%;
 }
 
 @media screen and (max-width: 768px) {
